--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,4 @@ deps =
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest -v
-passenv = BRITIVE_TENANT BRITIVE_API_TOKEN BRITIVE_TEST_ENV_ACCOUNT_ID BRITIVE_USER_EMAIL
+passenv = BRITIVE_TENANT BRITIVE_API_TOKEN BRITIVE_TEST_ENV_ACCOUNT_ID
