--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = britive
-version = 2.1.1
+version = 2.1.2
 author = Britive Inc.
 author_email = support@britive.com
-description = A pure Python wrapper for the Britive API
+description = A pure Python SDK for the Britive API
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://www.britive.com
