--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = britive
-version = 2.8.1
+version = 2.9.0
 author = Britive Inc.
 author_email = support@britive.com
 description = A pure Python SDK for the Britive API
@@ -17,6 +17,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
+install_requires =
+    requests
 
 [options.packages.find]
 where = src
