--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = britive
-version = 2.19.0
+version = 2.20.0
 author = Britive Inc.
 author_email = support@britive.com
 description = A pure Python SDK for the Britive API
@@ -18,7 +18,7 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 install_requires =
-    requests
+    requests>=2.31.0
 
 [options.packages.find]
 where = src
