manual exponential backoff and retry, tox testing updates

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ isolated_build = True
 # install pytest in the virtualenv where commands will be executed
 deps =
     pytest
-    requests ~= 2.27.1
+    requests>=2.31.0
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest -v
-passenv = BRITIVE_TENANT BRITIVE_API_TOKEN BRITIVE_TEST_ENV_ACCOUNT_ID BRITIVE_TEST_IGNORE_SCAN BRITIVE_GCP_TEST_APP_ID
+passenv = BRITIVE_TENANT,BRITIVE_API_TOKEN,BRITIVE_TEST_ENV_ACCOUNT_ID,BRITIVE_TEST_IGNORE_SCAN,BRITIVE_GCP_TEST_APP_ID
