PAB-16319: Step-Up MFA TOTP for checkout

--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,6 @@ deps =
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest -v
-passenv = BRITIVE_TENANT,BRITIVE_API_TOKEN,BRITIVE_TEST_ENV_ACCOUNT_ID,BRITIVE_TEST_IGNORE_SCAN,BRITIVE_GCP_TEST_APP_ID
+passenv = * # BRITIVE_TENANT,BRITIVE_API_TOKEN,BRITIVE_TEST_ENV_ACCOUNT_ID,BRITIVE_TEST_IGNORE_SCAN,BRITIVE_GCP_TEST_APP_ID
+
+; commands = python -c "print('computer says {env:MY_FANCY_ENV_VAR:}!')"
