PAB-16319: Step-Up MFA TOTP for checkout

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ isolated_build = True
 deps =
     pytest
     requests>=2.31.0
+    pyotp
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest -v
