docs:markdown linting and verbiage updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,6 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+[tool.pymarkdown]
+plugins.md013.line_length = 120
+plugins.md013.code_block_line_length = 120
