--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ isolated_build = True
 deps =
     pytest
     requests>=2.31.0
+    pyotp
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest -v
