--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,9 +69,8 @@ plugins.md013.line_length = 120
 plugins.md013.code_block_line_length = 120
 
 [tool.ruff]
-include = ["pyproject.toml", "src/**/*.py"]
+include = ["pyproject.toml", "src/**/*.py", "tests/*.py"]
 line-length = 120
-# target-version = "py38"
 
 [tool.ruff.format]
 quote-style = "single"
@@ -87,6 +86,9 @@ select = [
     "PL", #pylint
     "SIM", # flake8-simplify
 ]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*.py" = ["F403", "F405"]
 
 [tool.ruff.lint.pylint]
 allow-magic-value-types = ["int", "str"]
