--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,11 +53,9 @@ envlist = py311
 isolated_build = True
 
 [testenv]
-# install pytest in the virtualenv where commands will be executed
+# install dependencies virtualenv where commands will be executed
 deps =
-    pytest
-    requests>=2.31.0
-    pyotp
+    -rrequirements.txt
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest -v
