--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ classifiers = [
 license = {file = "LICENSE"}
 requires-python = ">=3.9"
 dependencies = [
-    "requests>=2.32.0"
+    "requests>=2.32.0",
+    "jmespath>=1.0.1"
 ]
 dynamic = ["version"]
 keywords = ["britive", "cpam", "identity", "jit"]
